# modular-agent-std

./: Cargo.toml  README.md
src/: array.rs  counter.rs  data.rs  display.rs  file.rs  image.rs  input.rs  lib.rs  sequence.rs  stream.rs  string.rs  time.rs  ui.rs  utils.rs  yaml.rs
tests/: main_test.rs
tests/presets/: Std_Input_test.json  Std_String_test.json
tests/suites/: input_test.rs  string_test.rs
